# CppCache

./: .gitignore  CMakeLists.txt  Cachepolicy.h  LfuCache.h  LruCache.h  main.cpp
ArcCache/: ArcCache.h  ArcCacheNode.h  ArcLfuPart.h  ArcLruPart.h
